src/test/deca/syntax/valid/class/16_plusieurField.deca
/* Description:
     tester class avec une liste de field
     (correct syntaxiquement)

    Historique:
      cree le 08/01/2020
*/

   class  A {

     int x, y;
   }
