src/test/deca/syntax/invalid/class/1_absenceDeClasse.deca
/* Description:
    Tester la declaration d'une variable de type classe alors que la classe n'est pas déclarée.

    Historique:
      cree le 20/01/2020
    Sortie attendue:


*/



{
	Test class = new Test();
}
